package Model.Enum;

/**
 * Enumeración que define las especialidades médicas disponibles en el sistema.
 * Cada valor representa una rama específica de la medicina.
 *
 * @author SecMecProject
 * @version 1.0
 */
public enum Especialidad {
    /** Especialidad en enfermedades del corazón y sistema cardiovascular */
    CARDIOLOGIA,
    /** Especialidad en enfermedades de la piel */
    DERMATOLOGIA,
    /** Especialidad en enfermedades del sistema nervioso */
    NEUROLOGIA,
    /** Especialidad en salud infantil */
    PEDIATRIA,
    /** Especialidad en trastornos mentales */
    PSIQUIATRIA,
    /** Especialidad en diagnóstico por imágenes */
    RADIOLOGIA,
    /** Especialidad en salud femenina y reproductiva */
    GINECOLOGIA,
    /** Especialidad en huesos, músculos y articulaciones */
    ORTOPEDIA,
    /** Especialidad en enfermedades de los ojos */
    OFTALMOLOGIA,
    /** Especialidad en oído, nariz y garganta */
    OTORRINOLARINGOLOGIA
}
