package Model.Enum;

/**
 * Enumeración que define los tipos de pruebas médicas disponibles.
 * Cada valor representa un tipo específico de examen o análisis médico.
 *
 * @author SecMecProject
 * @version 1.0
 */
public enum TipoPrueba {
    /** Análisis de sangre */
    SANGRE,
    /** Análisis de orina */
    ORINA,
    /** Prueba de diagnóstico por imagen (rayos X, TAC, etc.) */
    RADIODIAGNOSTICO,
    /** Extracción y análisis de tejido */
    BIOPSIA,
    /** Prueba de actividad eléctrica del corazón */
    ELECTROCARDIOGRAMA,
    /** Prueba para detectar alergias */
    PRUEBA_ALERGIAS
}
